--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
             <div class="icon">
                 <h2 class="logo">PraRoz</h2>
             </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="http://#" target="_blank" rel="noopener noreferrer">HOME</a></li>
+                    <li><a href="http://#" target="_blank" rel="noopener noreferrer">ABOUT</a></li>
+                    <li><a href="http://#" target="_blank" rel="noopener noreferrer">SERVICES</a></li>
+                    <li><a href="http://#" target="_blank" rel="noopener noreferrer">DESIGN</a></li>
+                    <li><a href="http://#" target="_blank" rel="noopener noreferrer">CONTACT</a></li>
+                </ul>
+            </div>
+            <div class="search">
+                <input class="srch" type="search" name="" placeholder="Type to Text">
+                <a href="#"><button class="btn">Search</button></a>
+            </div>
         </div>
     </div>
 </body>
