--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                 <a href="#"><button class="btn">Search</button></a>
             </div>
         </div>
+        <div class="content">
+            <h1>Web Design & <br><span>Development</span> <br> Course</h1>
+            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatum <br> magni neque error numquam nisi inventore nesciunt a incidunt nihil. <br>Dolorem optio distinctio debitis hic necessitatibus eum officiis libero harum.</p>
+            <button class="cn"><a href="#">JOIN US</a></button>
+        </div>
     </div>
 </body>
 </html>
