--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main">
         <div class="navbar">
             <div class="icon">
-                <h2 class="logo">PraRoz</h2>
+                <h2 class="logo">Phelyks</h2>
             </div>
             <div class="menu">
                 <ul>
@@ -31,6 +31,15 @@
             <h1>Web Design & <br><span>Development</span> <br> Course</h1>
             <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatum <br> magni neque error numquam nisi inventore nesciunt a incidunt nihil. <br>Dolorem optio distinctio debitis hic necessitatibus eum officiis libero harum.</p>
             <button class="cn"><a href="#">JOIN US</a></button>
+            <div class="form">
+                <h2>LOGIN HERE</h2>
+                <input type="email" name="email" placeholder="Enter email address" id="">
+                <input type="password" name="" placeholder="Enter Password">
+                <button class="btnn">LOGIN</button>
+                <p class="link">Don't have an account</p>
+                <p><a href="#">Sign Up Here</a></p>
+                <p class="liw">Log in With</p>
+            </div>
         </div>
     </div>
 </body>
