--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <input type="password" name="" placeholder="Enter Password">
                 <button class="btnn"><a href="#">LOGIN</a></button>
                 <p class="link">Don't have an account</p>
-                <p><a href="#">Sign Up Here</a></p>
+                <p class="sign"><a href="#">Sign Up</a> Here</p>
                 <p class="liw">Log in With</p>
             </div>
         </div>
