--- a/index.html
+++ b/index.html
@@ -39,8 +39,15 @@
                 <p class="link">Don't have an account</p>
                 <p class="sign"><a href="#">Sign Up</a> Here</p>
                 <p class="liw">Log in With</p>
+                <div class="icons">
+                    <a href="#"><ion-icon name="logo-facebook" ></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-instagram" ></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-twitter" ></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-whatsapp" ></ion-icon></a>
+                </div>
             </div>
         </div>
     </div>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
